test/optimizations/arrayViewElision/rankChangeFunky.chpl
var A: [1..5, 1..5, 1..5] int = 1;
var B: [1..5, 1..5, 1..5] int = 2;

A[1, 2, 3..12] = B[1..5, 2, 3..7];

writeln(A);
